[package]

name = "puppetfile"
version = "0.1.4"
authors = ["Robin Gloster <robin.gloster@mayflower.de>"]
license = "MIT"
description = "Puppetfile parser"
documentation = "http://mayflower.github.io/rust-puppetfile"
homepage = "https://github.com/Mayflower/rust-puppetfile"
repository = "https://github.com/Mayflower/rust-puppetfile"
readme = "README.md"
keywords = ["puppetfile", "parser", "r10k"]

[dependencies]
semver = "0.1.13"
url = "0.2.17"
hyper = "0.3.0"
log = "0.2.1"
rustc-serialize = "0.2.10"
peg = "0.2.0"
